# Cesta-API

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/geodata-matcher/: Cargo.toml
crates/geodata-matcher/src/: lib.rs
crates/gtfs-importer/: Cargo.toml
crates/gtfs-importer/src/: lib.rs
crates/offline-pack/: Cargo.toml
crates/offline-pack/src/: lib.rs
crates/routing-core/: Cargo.toml
crates/routing-core/src/: lib.rs
crates/transit-model/: Cargo.toml
crates/transit-model/src/: lib.rs
data/cities/: README.md
docs/: api-architecture.md  app-foot-crossings.md  app-intermediate-stops.md  app-vehicle-map.md  auth.md  backend-api.md  cd-ticketing-capabilities.md  cd-ticketing-frontend-handoff.md  cd_ticket_api_backend_integration.md  codex-workflow.md  data-quality.md  data-sources.md  geodata-matching.md  offline-format.md  privacy.md  product-spec.md  realtime-spec.md  routing-spec.md  source-priority.md  ticketing-readiness.md
infra/docker/: api.Dockerfile  data-pipeline.Dockerfile  realtime-worker.Dockerfile  runtime-services.Dockerfile
infra/github-actions/: ci.yml
infra/postgres/maintenance/: storage_report.sql
infra/postgres/migrations/: 0001_extensions.sql  0002_core_schema.sql  0003_users.sql  0004_indexes_and_seed.sql  0005_cities.sql  0006_public_transport_feeds.sql  0007_routing_algorithm_config.sql  0008_cd_ticketing.sql  0009_ticketing_journey_intents.sql  0010_journey_search_indexes.sql  0011_transfer_search_indexes.sql  0012_stop_search_indexes.sql  0013_stop_suggester_fast_path_indexes.sql  0014_routing_range_and_endpoint_cache.sql  0015_vehicle_map_contract.sql  0016_data_repairs.sql  0017_stop_deduplication.sql  0018_automatic_directional_stop_merges.sql  0019_storage_optimization.sql
services/api/: Cargo.toml
services/api/admin/: admin.css  admin.js  index.html
services/api/src/: cd.rs  config.rs  error.rs  lib.rs  main.rs  ticketing.rs
services/api/src/controllers/: account.rs  mod.rs  system.rs  transit.rs
services/api/src/http/: routes.rs
services/api/src/infrastructure/: database.rs
services/api/src/repositories/: users.rs
services/api/src/services/: auth.rs
services/data-pipeline/: Cargo.toml
services/data-pipeline/src/: main.rs
services/realtime-worker/: Cargo.toml
services/realtime-worker/src/: main.rs
