[workspace]
resolver = "2"
members = [
  "crates/transit-model",
  "crates/routing-core",
  "crates/gtfs-importer",
  "crates/offline-pack",
  "crates/geodata-matcher",
  "services/api",
  "services/data-pipeline",
  "services/realtime-worker",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/cesta-api"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
futures-util = "0.3"
geo-types = { version = "0.7", features = ["serde"] }
hex = "0.4"
jsonwebtoken = "9"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "4"
