[workspace]
resolver = "2"
members = [
  "crates/transit-model",
  "crates/routing-core",
  "crates/gtfs-importer",
  "crates/offline-pack",
  "crates/geodata-matcher",
  "services/api",
  "services/data-pipeline",
  "services/realtime-worker",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/cesta-api"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
futures-util = "0.3"
geo-types = { version = "0.7", features = ["serde"] }
hex = "0.4"
jsonwebtoken = "9"
prost = "0.14"
password-hash = { version = "0.5", features = ["rand_core"] }
percent-encoding = "2"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rsa = { version = "0.9", features = ["pem", "sha1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "request-id", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
zip = "4"
