[package]
name = "cesta-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
geo-types.workspace = true
jsonwebtoken.workspace = true
offline-pack = { path = "../../crates/offline-pack" }
password-hash.workspace = true
rand_core.workspace = true
routing-core = { path = "../../crates/routing-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transit-model = { path = "../../crates/transit-model" }
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
