[package]
name = "cesta-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
geo-types.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
offline-pack = { path = "../../crates/offline-pack" }
password-hash.workspace = true
percent-encoding.workspace = true
rand_core.workspace = true
reqwest.workspace = true
rsa.workspace = true
routing-core = { path = "../../crates/routing-core" }
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transit-model = { path = "../../crates/transit-model" }
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
