[package]
name = "data-pipeline"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
gtfs-importer = { path = "../../crates/gtfs-importer" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

